# finansai

./: main.py  pyproject.toml
src/agents/: financial_agent.py  social_agent.py  utils.py
