[project]
name = "finansai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.5",
    "matplotlib>=3.10.3",
    "mplfinance>=0.12.10b0",
    "praw>=7.8.1",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
